@@ -1,3 +1,5 @@
+- Refactor: Add method to check if attends is valid
+
 40.3.0 (29-12-2022)
 - Refactor: Program Conclusion - replace usage of RegistrationStateTypeEnum by RegistrationStateType
 
